[package]
name = "machin"
version = "0.5.3"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>"]
description = "Machin is a cli program that simplifies file conversions and batch processing. It's inspired from filter/map/reduce"
keywords = ["app", "cli", "files", "conversion", "batch"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mothsart/machin"
homepage = "https://github.com/mothsart/machin"
edition = "2021"
rust = "1.60"

[dependencies]
clap = { version="3.2", features=['cargo'] }
lopdf = { version="0.27", features=["embed_image"] }
exitcode="1.1.2"
mime="0.3"
mime_guess="2.0"
resvg="0.14"
usvg="0.14.0"
tiny-skia="0.5"
image = { version="0.24" }
markdown = "0.3"
colored = "2"
zip = "0.6"
tempfile = "3.3"
svg-hush = "0.9"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"

[dev-dependencies]
rust-crypto = "0.2.36"

[build-dependencies]
clap = { version="3.2", features=['cargo'] }
clap_complete = { version="3.2" }
