[package]
name = "machin"
version = "0.6.2"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>"]
description = "Machin is a cli program that simplifies file conversions and batch processing. It's inspired from filter/map/reduce"
keywords = ["app", "cli", "files", "conversion", "batch"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mothsart/machin"
homepage = "https://github.com/mothsart/machin"
edition = "2021"

[dependencies]
clap = { version="4.5", features=['cargo'] }
lopdf = { version="0.33", features=["embed_image"] }
exitcode="1.1.2"
mime="0.3"
mime_guess = { git = "https://github.com/mothsART/mime_guess", branch = "feature/xcf-file" }
resvg="0.45"
usvg="0.45"
tiny-skia="0.11"
image = { version="0.25" }
markdown = "0.3"
colored = "2"
zip = "2"
tempfile = "3.3"
svg-hush = "0.9"
serde = "1"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
tera = "1.17"
svg2pdf = "0.11"
xcf-rs = { git = "https://github.com/mothsART/xcf-rs", branch = "master" }

[dev-dependencies]
sha1 = "0.10.6"
map-macro = "0.2.4"

[build-dependencies]
clap = { version="4.5", features=['cargo'] }
clap_complete = { version="4.5" }
